styles/helpers/_social_share-button.scss
// scss-lint:disable SelectorFormat, PropertySortOrder
.social_share_container {
    line-height: 50px;
    height: 50px;
    border: 1px solid $color-grey-light;
    margin: 0 15px;
    width: auto;
    padding-bottom: 1em;
    text-align: center;

    @media #{$medium-up} {
        width: 100%;
        margin-bottom: 1rem;
        margin-top: 1.85rem;
        border: 0;
    }

    @media #{$large-up} {
        margin-bottom: 2.5rem;
    }

    &--gallery {
        margin: 0 15px;
        border: 1px solid $color-grey-light;
        text-align: center;
        clear: both;

        @media #{$medium-up} {
            width: auto;
        }

        @media #{$large-up} {
            margin: $column-gutter/4 0 0;
            text-align: right;
        }

        // scss-lint:disable UnnecessaryParentReference
        header & {
            border: 0;
            clear: none;
            position: absolute;
            right: 0;
            white-space: nowrap;
            text-align: left;
            width: 360px;
            margin: $column-gutter/4 0 0;
            padding-left: 40px;
            padding-right: 31px;

            & .social-share,
            &.email {
                text-align: left; // left align icon glyphs inside buttons
            }

            @media #{$large-up} {
                padding-left: 35px;

                .icon-facebook {
                    width: 35px;

                    &:before {
                        font-size: 21px;
                    }
                }

                .icon-twitter {
                    width: 44px;

                    &:before {
                        font-size: 19px;
                    }
                }

                .icon-pinterest {
                    width: 43px;
                }
            }
        }
        // scss-lint:enable UnnecessaryParentReference

        .social-share {
            width: 13%;

            @media #{$large-up} {
                border: 0;
                margin-right: 0;
                width: 50px;
            }

            &.email {
                border: 0;
            }
        }

        .social-share-count {
            display: inline-block;
            text-align: center;
            margin-left: 18px;
            line-height: 50px;
            width: 38px;
            border: 0;
            padding-left: 1em;

            &:before {
                border-right-color: $color-grey-light;
            }
        }
    }
}

.social-share {
    color: transparent;
    font-size: 0;
    width: 17%;
    background: none;
    border: 0;
    height: 50px;
    margin-right: 15px;
    padding: 0;
    transition: border .2s ease-in-out;
    position: relative;
    vertical-align: middle;

    @media #{$large-up} {
        border: 1px solid $color-grey-light;
        margin-right: 15px;
        width: 60px;
    }

    &:before {
        font-size: 20px;
        position: absolute;
        line-height: 34px;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
    }

    &:active,
    &:hover,
    &:focus {
        background-color: transparent;
    }

    &.facebook {
        &:hover {
            border-color: $facebook-blue;
        }

        &:before {
            //icon
            color: $facebook-blue;
            font-size: 23px;
        }
    }

    &.twitter {
        &:hover {
            border-color: $twitter-blue;
        }

        &:before {
            //icon
            color: $twitter-blue;
        }
    }

    &.pinterest {
        &:hover {
            border-color: $pinterest-red;
        }

        &:before {
            //icon
            color: $pinterest-red;
        }
    }

    &.email {

        display: inline-block;
        vertical-align: middle;
        text-align: center;
        @media #{$large-up} {
            border: 1px solid $color-grey-light;
        }

        &:hover {
            border-color: $color-primary;
            color: transparent;
        }

        &:before {
            //icon
            font-size: 15px;
        }
    }
}
// scss-lint:enable SelectorFormat

